--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "my online portfolio",
   "main": "index.js",
   "scripts": {
-    "start": "eleventy --serve",
-    "build": "eleventy"
+    "build": "npx @11ty/eleventy",
+		"start": "npx @11ty/eleventy --serve --quiet",
+    "build-ghpages": "npx @11ty/eleventy"
   },
   "keywords": [],
   "author": "Melissa Gattoni",
