--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meligatt-portfolio",
+  "name": "meligatt-portfolio-2024",
   "version": "1.0.0",
   "description": "my online portfolio",
   "main": "index.js",
