--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npx @11ty/eleventy",
-		"start": "npx @11ty/eleventy --serve --quiet",
+		"start": "npx @11ty/eleventy --serve --quiet"
   },
   "keywords": [],
   "author": "Melissa Gattoni",
