--- a/.github/workflows/deploy-to-ghpages.yml
+++ b/.github/workflows/deploy-to-ghpages.yml
@@ -1,32 +1,46 @@
-name: Eleventy Build
-
-
+name: Build Eleventy
 on:
+  # Runs on pushes targeting the default branch
   push:
-    branches:
-      - main
-      
+    branches: ["main"]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-        - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
+      - name: Use Node.js >= 14.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20.x
 
-        - name: Setup Node
-          uses: actions/setup-node@v3
-          with:
-            node-version: '18'
+      - name: run eleventy
+        run: npx @11ty/eleventy
 
+      - name: upload static site content
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: ./_site
 
-        - run: npm ci
-
-        - run: npm install
-        - run: npm run build
-
-
-        - name: Deploy
-          uses: peaceiris/actions-gh-pages@v3
-          with:
-            deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-            publish_dir: ./dist
+ # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: $
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
