--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.html",
   "scripts": {
     "build": "npx @11ty/eleventy",
-		"start": "npx @11ty/eleventy --serve --quiet"
+    "start": "npx @11ty/eleventy --serve --quiet"
   },
   "keywords": [],
   "author": "Melissa Gattoni",
   "license": "ISC",
   "dependencies": {
-    "@11ty/eleventy": "^2.0.1"
+    "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy-navigation": "^0.3.5"
   }
 }
