--- a/.github/workflows/deploy-to-ghpages.yml
+++ b/.github/workflows/deploy-to-ghpages.yml
@@ -25,15 +25,16 @@ jobs:
         with:
           node-version: 20.x
 
-      - name: run eleventy
-        run: npx @11ty/eleventy
+      - name: Install dependencies & build
+        run: |
+            npm install
+            npm @11ty/eleventy
+      - uses: actions/upload-pages-artifact@v2
 
       - name: upload static site content
         uses: actions/upload-pages-artifact@v2
         with:
           path: ./_site
-
- # Deployment job
   deploy:
     environment:
       name: github-pages
