fix command to build 11ty

--- a/.github/workflows/deploy-to-ghpages.yml
+++ b/.github/workflows/deploy-to-ghpages.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies & build
         run: |
             npm install
-            npm @11ty/eleventy
+            npm build
       - uses: actions/upload-pages-artifact@v2
 
       - name: upload static site content
