replace njk templates with liquid

--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   "dependencies": {
     "@11ty/eleventy": "^2.0.1",
     "@11ty/eleventy-navigation": "^0.3.5"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3",
+    "prettier-plugin-jinja-template": "^2.0.0"
   }
 }
